Import of HOLLY/App-CLI-Plugin-Net-SMTP-0.2 from CPAN.
gitpan-cpan-distribution: App-CLI-Plugin-Net-SMTP
gitpan-cpan-version:      0.2
gitpan-cpan-path:         HOLLY/App-CLI-Plugin-Net-SMTP-0.2.tar.gz
gitpan-cpan-author:       HOLLY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 Revision history for Perl extension App::CLI::Plugin::Net::SMTP
 
+0.2  Mon Nov 30 03:00:00 2009
+       - add new method(smtp_open)
 0.1  Sun Oct 25 23:00:09 2009
        - original version
