--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Perl extension App::CLI::Plugin::Net::SMTP
 
+1.0  Sat Dec 12 23:30:13 2009
+       - it's new
 0.2  Mon Nov 30 03:00:00 2009
        - add new method(smtp_open)
 0.1  Sun Oct 25 23:00:09 2009
