--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension App::CLI::Plugin::Net::SMTP
 
+1.2  Sat Mon Jan  4 01:42:57 JST 2010
+       - mini fix
+1.1  nothing
+       - nothing
 1.0  Sat Dec 12 23:30:13 2009
        - it's new
 0.2  Mon Nov 30 03:00:00 2009
