--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Perl extension App::CLI::Plugin::Net::SMTP
 
+1.3  Mon Sep 19 10:45:52 JST 2011
+       - change dependencies module Class::Accessor::Grouped (before Class::Data::Accessor)
 1.2  Sat Mon Jan  4 01:42:57 JST 2010
        - mini fix
 1.1  nothing
